// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ColourInput /> should have some hintText 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexWrap_nowrap__7o6k06gs useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gx"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexShrink_0__7o6k06gq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h9 ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fa useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06ez"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_flexGrow_1__7o6k06gp ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl useBoxStyles_backgroundColours_transparent__7o6k06en withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
          id="id"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg7 InputState_natural_default_borderColour__9z39d75"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_block__7o6k06fa useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_notchGapPlaceholder__1r7zdxg3"
        >
          placeholder
        </div>
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fe useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_placeholder_default__1r7zdxgt InputState_natural_default_colour__9z39d74 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxg10"
          for="id"
        >
          placeholder
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg8 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
  <p
    class="reset_blockText__6swfdsc useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_blockText__6swfdsc useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_2__w6to7i2 reset_blockText__6swfdsc useBoxStyles_makeResponsiveStyle_key_bp__7o6k064k useBoxStyles_makeResponsiveStyle_key_bp__7o6k0684 HintText_hintText__w01siw0 InputState_natural_default_colour__9z39d74"
  >
    hint text
  </p>
</div>
`;

exports[`<ColourInput /> should match snapshot 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexWrap_nowrap__7o6k06gs useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gx"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexShrink_0__7o6k06gq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h9 ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fa useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06ez"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_flexGrow_1__7o6k06gp ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl useBoxStyles_backgroundColours_transparent__7o6k06en withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
          id="id"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg7 InputState_natural_default_borderColour__9z39d75"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_block__7o6k06fa useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_notchGapPlaceholder__1r7zdxg3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fe useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_placeholder_default__1r7zdxgt InputState_natural_default_colour__9z39d74 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxg10"
          for="id"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg8 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when active 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexWrap_nowrap__7o6k06gs useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gx"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexShrink_0__7o6k06gq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h9 ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl"
            style="background-color: rgb(236, 64, 64);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fa useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06ez"
        >
          #ec4040
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_flexGrow_1__7o6k06gp ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl useBoxStyles_backgroundColours_transparent__7o6k06en withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
          type="color"
          value="#ec4040"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg6 InputState_activeBorderColour__9z39d71"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg7 InputState_activeBorderColour__9z39d71"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_block__7o6k06fa useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_notchGapPlaceholder__1r7zdxg3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fe useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_placeholder_default__1r7zdxgt InputState_activeColour__9z39d70 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxg10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg8 InputState_activeBorderColour__9z39d71 InputState_activeBorderColour__9z39d71"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when loading 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 ProgressSpinner_size_medium_circular__5j3teub ProgressSpinner_colours_primary__5j3teu5 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd withEnhancedInput_iconRoot__bd4oide withEnhancedInput_suffixIcon__bd4oidg withEnhancedInput_iconSize_medium__bd4oidi InputState_natural_default_colour__9z39d74"
      >
        <svg
          class="useBoxStyles_display_block__7o6k06fa useBoxStyles_overflow_hidden__7o6k06f5 ProgressSpinner_circular__5j3teu1"
          viewBox="25 25 50 50"
        >
          <circle
            class="ProgressSpinner_path__5j3teu3 ProgressSpinner_size_medium_path__5j3teuc"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke-miterlimit="10"
          />
        </svg>
      </div>
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexWrap_nowrap__7o6k06gs useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gx"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexShrink_0__7o6k06gq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h9 ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fa useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06ez"
        >
          #6c1111
        </span>
        <input
          aria-busy="true"
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_flexGrow_1__7o6k06gp ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl useBoxStyles_backgroundColours_transparent__7o6k06en withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__bd4oidd"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg7 InputState_natural_default_borderColour__9z39d75"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_block__7o6k06fa useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_notchGapPlaceholder__1r7zdxg3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fe useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_placeholder_default__1r7zdxgt InputState_natural_default_colour__9z39d74 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxg10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg8 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when touched 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexWrap_nowrap__7o6k06gs useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gx"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexShrink_0__7o6k06gq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h9 ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fa useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06ez"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_flexGrow_1__7o6k06gp ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl useBoxStyles_backgroundColours_transparent__7o6k06en withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg6 InputState_error_default_borderColour__9z39d7d"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg7 InputState_error_default_borderColour__9z39d7d"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_block__7o6k06fa useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_notchGapPlaceholder__1r7zdxg3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fe useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_placeholder_default__1r7zdxgt InputState_error_default_colour__9z39d7c useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxg10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg8 InputState_error_default_borderColour__9z39d7d InputState_error_default_borderColour__9z39d7d"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexWrap_nowrap__7o6k06gs useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gx"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexShrink_0__7o6k06gq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h9 ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fa useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06ez"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_flexGrow_1__7o6k06gp ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl useBoxStyles_backgroundColours_transparent__7o6k06en withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg6 InputState_error_default_borderColour__9z39d7d"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg7 InputState_error_default_borderColour__9z39d7d"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_block__7o6k06fa useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_notchGapPlaceholder__1r7zdxg3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fe useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_placeholder_default__1r7zdxgt InputState_error_default_colour__9z39d7c useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxg10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg8 InputState_error_default_borderColour__9z39d7d InputState_error_default_borderColour__9z39d7d"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when touched and valid 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexWrap_nowrap__7o6k06gs useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gx"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexShrink_0__7o6k06gq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h9 ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fa useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06ez"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_flexGrow_1__7o6k06gp ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl useBoxStyles_backgroundColours_transparent__7o6k06en withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg6 InputState_success_default_borderColour__9z39d77"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg7 InputState_success_default_borderColour__9z39d77"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_block__7o6k06fa useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_notchGapPlaceholder__1r7zdxg3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fe useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_placeholder_default__1r7zdxgt InputState_success_default_colour__9z39d76 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxg10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg8 InputState_success_default_borderColour__9z39d77 InputState_success_default_borderColour__9z39d77"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot with both icons 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <i
        class="useBoxStyles_display_block__7o6k06fa Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd withEnhancedInput_iconRoot__bd4oide withEnhancedInput_suffixIcon__bd4oidg withEnhancedInput_iconSize_medium__bd4oidi InputState_natural_default_colour__9z39d74"
        role="presentation"
      >
        <svg
          class="useBoxStyles_display_block__7o6k06fa useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexWrap_nowrap__7o6k06gs useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gx"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexShrink_0__7o6k06gq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h9 ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fa useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06ez"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_flexGrow_1__7o6k06gp ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl useBoxStyles_backgroundColours_transparent__7o6k06en withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__bd4oidd"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg7 InputState_natural_default_borderColour__9z39d75"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_block__7o6k06fa useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_notchGapPlaceholder__1r7zdxg3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fe useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_placeholder_default__1r7zdxgt InputState_natural_default_colour__9z39d74 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxg10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg8 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot with suffix icon 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew input-class"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 NotchedBase_root__1r7zdxg0"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
    >
      <i
        class="useBoxStyles_display_block__7o6k06fa Icon_makeResponsiveStyle_key_bp__14sz1q64 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd withEnhancedInput_iconRoot__bd4oide withEnhancedInput_suffixIcon__bd4oidg withEnhancedInput_iconSize_medium__bd4oidi InputState_natural_default_colour__9z39d74"
        role="presentation"
      >
        <svg
          class="useBoxStyles_display_block__7o6k06fa useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexWrap_nowrap__7o6k06gs useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gx"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd useBoxStyles_makeResponsiveStyle_key_bp__7o6k06g0 useBoxStyles_flexShrink_0__7o6k06gq useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h9 ColourInput_colouredBoxHolder__1c82wdf1 ColourInput_colouredBoxHolderSize_medium__1c82wdf3"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__6swfds2 useBoxStyles_display_block__7o6k06fa useBoxStyles_textAlign_left__7o6k06f2 useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_neutral__w6to7ih useTextStyles_fontWeight_normal__w6to7in useTextStyles_sizes_4__w6to7i4 ColourInput_valueText__1c82wdf4 ColourInput_valueTextSize_medium__1c82wdf6 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06ez"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_flexGrow_1__7o6k06gp ColourInput_input__1c82wdf0 reset_trimmedBlockElement__6swfds5 reset_appearance__6swfds0 reset_input__6swfds8 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_position_relative__7o6k06f1 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl useBoxStyles_backgroundColours_transparent__7o6k06en withEnhancedInput_input_itself_root__bd4oid0 withEnhancedInput_inputItselfSize_medium_root_any__bd4oida undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__bd4oidd"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fb useBoxStyles_width_full__7o6k06ew useBoxStyles_height_full__7o6k06ey useBoxStyles_position_absolute__7o6k06ez useBoxStyles_textAlign_left__7o6k06f2 useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_borderVisualDefaults__1r7zdxg2 NotchedBase_borders_root_default__1r7zdxg4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_leading__1r7zdxg6 InputState_natural_default_borderColour__9z39d75"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_middle__1r7zdxg7 InputState_natural_default_borderColour__9z39d75"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_block__7o6k06fa useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_notchGapPlaceholder__1r7zdxg3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__6swfds2 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0624 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064c useBoxStyles_makeResponsiveStyle_key_bp__7o6k065g useBoxStyles_makeResponsiveStyle_key_bp__7o6k066k useBoxStyles_makeResponsiveStyle_key_bp__7o6k067o useBoxStyles_makeResponsiveStyle_key_bp__7o6k068s useBoxStyles_display_inline__7o6k06fe useBoxStyles_position_absolute__7o6k06ez useBoxStyles_pointerEvents_none__7o6k06hd NotchedBase_placeholder_default__1r7zdxgt InputState_natural_default_colour__9z39d74 useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_neutral__w6to7ih useTextStyles_noWrap__w6to7iq useTextStyles_sizes_4__w6to7i4 NotchedBase_placeholderPlacement_medium_shifted__1r7zdxg10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1r7zdxg1 NotchedBase_borders_trailing__1r7zdxg8 InputState_natural_default_borderColour__9z39d75 InputState_natural_default_borderColour__9z39d75"
      />
    </div>
  </div>
</div>
`;
